docs/versioned_docs/version-1.8.0/Flows/concepts-publish.mdx
---
title: Trigger flows with the idrflow API
slug: /concepts-publish
---

After you build a flow, you probably want to run it within an application, such as a chatbot within a mobile app or website.

idrflow provides several ways to run flows from external applications:

* [Trigger flows with the idrflow API](#api-access)
* [Add an embedded chat widget to a website](#embedded-chat-widget)
* [Serve flows through a idrflow MCP server](#serve-flows-through-a-langflow-mcp-server)
* [Run flows with the OpenAI Responses compatible endpoint](#openai-responses-api)

Although you can use these options with an isolated, local idrflow instance, they are typically more valuable when you have [deployed a idrflow server](/deployment-overview) or [packaged idrflow as a dependency of an application](/develop-application).

## Use the idrflow API to run flows {#api-access}

The idrflow API is the primary way to access your flows and idrflow servers programmatically.

:::tip Try it
For an example of a script that calls the idrflow API, see the [Quickstart](/get-started-quickstart).
:::

### Generate API code snippets

To help you embed idrflow API requests in your scripts, idrflow automatically generates Python, JavaScript, and curl code snippets for your flows.
To get these code snippets, do the following:

1. In idrflow, open the flow that you want to embed in your application.
2. Click **Share**, and then select **API access**.

    These code snippets call the `/v1/run/$FLOW_ID` endpoint, and they automatically populate minimum values, like the idrflow server URL, flow ID, headers, and request parameters.

    :::tip Windows
    The paths generated by the API access pane assume a *nix environment.
    If you use Microsoft Windows or WSL, you might need to adjust the filepaths given in the code snippets.
    :::

    ![API access pane](/img/api-pane.png)

3. Optional: Click [**Input Schema**](#input-schema) to modify component parameters in the code snippets without changing the flow itself.

4. Copy the snippet for the language that you want to use.

5. Run the snippet as is, or use the snippet in the context of a larger script.

For more information and examples of other idrflow API endpoints, see [Get started with the idrflow API](/api-reference-api-examples).

### idrflow API authentication

In idrflow versions 1.5 and later, most API endpoints require authentication with a idrflow API key.

Code snippets generated in the **API access** pane include a script that checks for a `IDRFLOW_API_KEY` environment variable set in the local terminal session.
This script doesn't check for idrflow API keys set anywhere besides the local terminal session.

For this script to work, you must set a `IDRFLOW_API_KEY` variable in the terminal session where you intend to run the code snippet, such as `export IDRFLOW_API_KEY="sk..."`.

Alternatively, you can edit the code snippet to include an `x-api-key` header and ensure that the request can authenticate to the idrflow API.

For more information, see [API keys and authentication](/api-keys-and-authentication) and [Get started with the idrflow API](/api-reference-api-examples).

### Input Schema (tweaks) {#input-schema}

Tweaks are one-time overrides that modify component parameters at runtime, rather than permanently modifying the flow itself.
For an example of tweaks in a script, see the [Quickstart](/get-started-quickstart).

:::tip
Tweaks make your flows more dynamic and reusable.

You can create one flow and use it for multiple applications by passing application-specific tweaks in each application's idrflow API requests.
:::

In the **API access** pane, click **Input Schema** to add `tweaks` to the request payload in a flow's code snippets.

Changes to a flow's **Input Schema** are saved exclusively as tweaks for that flow's **API access** code snippets.
These tweaks don't change the flow parameters set in the [workspace](/concepts-overview#workspace), and they don't apply to other flows.

Adding tweaks through the **Input Schema** can help you troubleshoot formatting issues with tweaks that you manually added to idrflow API requests.

For example, the following curl command includes a tweak that disables the **Store Messages** setting in a flow's **Chat Input** component:

```bash
curl --request POST \
  --url "http://IDRFLOW_SERVER_ADDRESS/api/v1/run/FLOW_ID" \
  --header "Content-Type: application/json" \
  --header "x-api-key: IDRFLOW_API_KEY" \
  --data '{
  "input_value": "Text to input to the flow",
  "output_type": "chat",
  "input_type": "chat",
  "tweaks": {
    "ChatInput-4WKag": {
      "should_store_message": false
    }
  }
}'
```

### Use a flow ID alias

If you want your requests to use an alias instead of the actual flow ID, you can rename the flow's `/v1/run/$FLOW_ID` endpoint:

1. In idrflow, open the flow, click **Share**, and then select **API access**.
2. Click **Input Schema**.
3. In the **Endpoint Name** field, enter an alias for your flow's ID, such as a memorable, human-readable name.

    The name can contain only letters, numbers, hyphens, and underscores, such as `flow-customer-database-agent`.

4. To save the change, close the **Input Schema** pane.

The automatically generated code snippets now use your new endpoint name instead of the original flow ID, such as `url = "http://localhost:7868/api/v1/run/flow-customer-database-agent"`.

## Embed a flow into a website {#embedded-chat-widget}

idrflow now ships a first working version of the `<idrflow-chat>` widget.

The widget's source code lives in the dedicated [idrflow-embedded-chat GitLab repository](http://218.50.209.93:9001/peter/idrflow-embedded-chat), and deployed idrflow servers serve the built widget bundle from the same host at `/embedded-chat/idrflow-chat.js`.

### Use the generated snippet

In idrflow, open the flow that you want to embed, click **Share**, and then select **Embed into site**.

The generated snippet loads the widget bundle and mounts the custom element:

```html
<script
  type="module"
  src="http://IDRFLOW_SERVER_ADDRESS/embedded-chat/idrflow-chat.js"
></script>

<idrflow-chat
  window_title="My Assistant"
  flow_id="FLOW_ID"
  host_url="http://IDRFLOW_SERVER_ADDRESS"
></idrflow-chat>
```

### Authentication modes

The widget supports two V1 execution modes:

- **Private/internal flow mode**: Add an `api_key` attribute. The widget uses the authenticated build path and includes your `x-api-key` header.
- **Public flow mode**: Omit `api_key`. The widget uses the public flow build path.

For a private flow, the snippet should look like this:

```html
<script
  type="module"
  src="http://IDRFLOW_SERVER_ADDRESS/embedded-chat/idrflow-chat.js"
></script>

<idrflow-chat
  window_title="Private Assistant"
  flow_id="FLOW_ID"
  host_url="http://IDRFLOW_SERVER_ADDRESS"
  api_key="IDRFLOW_API_KEY"
></idrflow-chat>
```

### Important V1 limits

- Public flow mode currently requires the host page and `host_url` to share the same hostname so the widget can send the `client_id` cookie used by the shareable playground flow path.
- Private flow embed through browser session cookies isn't supported in V1. Use `api_key` for private/internal embeds.
- V1 doesn't yet cover attachments, voice mode, theming APIs, or public npm/CDN distribution.

## Serve flows through a idrflow MCP server {#serve-flows-through-a-langflow-mcp-server}

Each [idrflow project](/concepts-flows#projects) has an MCP server that exposes the project's flows as [tools](https://modelcontextprotocol.io/docs/concepts/tools) that [MCP clients](https://modelcontextprotocol.io/clients) can use to generate responses.

In addition to serving flows through idrflow MCP servers, you can use idrflow as an MCP client to access any MCP server, including your idrflow MCP servers.

Interactions with idrflow MCP servers happen through the idrflow API's `/mcp` endpoints.

For more information, see [Use idrflow as an MCP server](/mcp-server) and [Use idrflow as an MCP client](/mcp-client).

## Run flows with the OpenAI Responses compatible endpoint {#openai-responses-api}

idrflow includes an OpenAI Responses API-compatible endpoint at `/api/v1/responses` that allows you to use existing OpenAI client libraries and code with minimal modifications.

For more information, see [OpenAI Responses API](/api-openai-responses).

## See also

* [Import and export flows](/concepts-flows-import)
* [Files endpoints](/api-files)
* [Test flows in the Playground](/concepts-playground)
